static/base.css
/* /workspace/Project-5/static/base.css */
html {
    height: 100%;
}

body {
    background: rgb(33, 99, 139);
    height: calc(100vh - 164px);
    color: black;
    font-family: 'Lato';
}

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.bg-my-primary {
    color: #0EABB0 !important;  /* Correct usage of !important */
}

.dark {
    color: #000000 !important;  /* Also corrected here */
}


.my-primary {
    color: #0EABB0;  /* Custom class, avoids conflicts */
}

.my-dark {
    color: #000000;  /* Custom class */
}

